--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
 <h1 class="NASABlue" style="text-align: center"> Weather API</h1>
 </body>
 <p> URL format: http://127.0.0.1: 5000/api/v1/station/date</p>
-<p>URL Example: http://127.0.0.1: 5000/api/v1/centralpark/19881031</p>
-# SPOOKY
+<p>URL Example: http://127.0.0.1: 5000/api/v1/centralpark/1988-10-31<br>
+<i>Yes, the dashes (-) ARE mandatory!</i></p>
+<b># SPOOKY</b>
 </html>
