Started a seperate CookieCutter project for the upcoming Wine analysis. Currently working on the Historical Weather Data API further.

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,4 +16,6 @@
 <p>URL Example: http://127.0.0.1: 5000/api/v1/centralpark/1988-10-31<br>
 <i>Yes, the dashes (-) ARE mandatory!</i></p>
 <b># SPOOKY</b>
+
+<p>{{data|safe}}</p>
 </html>
